# xdial_s3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  declare_header.py  partitions.csv  resize_png.py  sdkconfig.defaults
components/: lv_conf.h
components/lv_app/: CMakeLists.txt  README.md  lv_app.c  lv_app.h  lv_app_multi_lang.c  lv_app_multi_lang.h
main/: CMakeLists.txt  idf_component.yml  main.c
main/ai_chat/: README.md  ai_chat.c  ai_chat.h
main/apps/: ai_chat_app.c  apps.c  apps.h  clock_app.c  crypto_app.c  example_app.c  home_app.c  player_app.c  settings_app.c
main/apps/assets/fonts/: fonts.h
main/apps/assets/imgs/: bitcoin_icon_40x40.c  clock_icon_40x40.c  imgs.h  play_icon_40x40.c  plus_icon_40x40.c  smiley_icon_40x40.c  star_icon_40x40.c  tools_icon_40x40.c
main/audio_manager/: audio_manager.c  audio_manager.h  embed_tone.c  embed_tone.h
main/board/: README.md  audio.c  board.h  board_config.h  input.c  lcd.c
main/lv_observers/: lv_observers.c
main/lv_port/: README.md  lv_port.h  lv_port_config.h  lv_port_display.c  lv_port_input.c
main/observers/: observers.c  observers.h
main/periodic_data_update/: periodic_data_update.c  periodic_data_update.h
main/server/: index.html  server.c  server.h
